# c-header-parser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
arm/: EmbeddedH.h
include/: DataReader.h  InterfaceWriter.h  TypeParser.h  defines.h  dirent.h  utility.h
src/: CMakeLists.txt  DataReader.cpp  InterfaceWriter.cpp  TypeParser.cpp
test/: CMakeLists.txt  Employee.h  test.cpp
windows/: getopt.c  getopt.h
